--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,14 +2,12 @@
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Sets permissions of GITHUB_TOKEN to allow deployment.
 permissions:
   contents: read
   pages: write
@@ -22,7 +20,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
@@ -31,12 +28,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+			- name: Clean up repo
+				run: >
+				rm -r .git .github .editorconfig test
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
           path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
