--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,15 +28,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-			- name: Clean up repo
-				run: >
-				rm -r .git .github .editorconfig test
+
+      - name: Clean up repo
+        run: |
+          rm -r .git .github .editorconfig
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: '.'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
