--- a/.editorconfig
+++ b/.editorconfig
@@ -3,14 +3,14 @@ root = true
 
 [*]
 end_of_line = lf
-insert_final_newline = true
-indent_style = tab
+indent_style = space
+indent_size = 4
 charset = utf-8
+insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
 
 [*.yml]
-indent_style = space
 indent_size = 2
